Add some rudimentary default CSS

--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,17 @@
     <meta charset='utf-8'>
     <title>DCVR Decoder</title>
     <meta name='viewport' content='width=device-width, initial-scale=0.8' />
+    <style type='text/css'>
+        html, body, * {
+            font-family: 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
+        }
+
+        body, html, a, a:visited {
+            background-color: #272727;
+            color: white;
+            text-shadow: rgba(0, 0, 0, 0.25) 0px 2px 0px;
+        }
+    </style>
   </head>
   <body>
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
