--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </form>
     <div id='loading' class='note'>This site decodes a
         <a href='https://cdt.ca.gov/news/california-launches-new-digital-tool-giving-residents-convenient-access-to-their-covid-19-vaccine-record/' target='_blank'>Digital COVID-19 Vaccination Record</a>
-        from the <a href='https://myvaccinerecord.cdph.ca.gov/faq' target='_blank'>California Department of Health</a>. 
+        from the <a href='https://myvaccinerecord.cdph.ca.gov/faq' target='_blank'>California Department of Public Health</a>.
         Request yours <a href='https://myvaccinerecord.cdph.ca.gov/' target='_blank'>here</a>.
         <br><br>
         If you are using Firefox and this site is not working properly, ensure the "<a href='https://support.mozilla.org/en-US/kb/firefox-protection-against-fingerprinting' target='_blank'>use HTML5 canvas image data</a>"
